// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EditRecordAction renders edit button with pidType conferences and pidValue 1`] = `
<ListItemAction>
  <EventTracker
    eventId="Edit"
    eventPropName="onClick"
    extractEventArgsToForward={null}
  >
    <ExternalLink
      href="/editor/record/conferences/1"
    >
      <IconText
        icon={<ForwardRef(EditOutlined) />}
        text="edit"
      />
    </ExternalLink>
  </EventTracker>
</ListItemAction>
`;

exports[`EditRecordAction renders edit button with pidType jobs and pidValue 1`] = `
<ListItemAction>
  <EventTracker
    eventId="Edit"
    eventPropName="onClick"
    extractEventArgsToForward={null}
  >
    <ExternalLink
      href="/submissions/jobs/1"
    >
      <IconText
        icon={<ForwardRef(EditOutlined) />}
        text="edit"
      />
    </ExternalLink>
  </EventTracker>
</ListItemAction>
`;

exports[`EditRecordAction renders edit button with pidType jobs and pidValue 2`] = `
<ListItemAction>
  <EventTracker
    eventId="Edit"
    eventPropName="onClick"
    extractEventArgsToForward={null}
  >
    <ExternalLink
      href="/submissions/authors/1"
    >
      <IconText
        icon={<ForwardRef(EditOutlined) />}
        text="edit"
      />
    </ExternalLink>
  </EventTracker>
</ListItemAction>
`;

exports[`EditRecordAction renders edit button with pidType literature and pidValue 1`] = `
<ListItemAction>
  <EventTracker
    eventId="Edit"
    eventPropName="onClick"
    extractEventArgsToForward={null}
  >
    <ExternalLink
      href="/workflows/edit_article/1"
    >
      <IconText
        icon={<ForwardRef(EditOutlined) />}
        text="edit"
      />
    </ExternalLink>
  </EventTracker>
</ListItemAction>
`;
